tests/baselines/reference/relativePathMustResolve.errors.txt
==== tests/cases/compiler/foo_1.ts (3 errors) ====
    import foo = require('./test/foo');
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! foo_1.ts(1,1): error TS2071: Cannot find external module ''./test/foo''.
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! foo_1.ts(1,1): error TS2072: Module cannot be aliased to a non-module type.
    var z = foo.x + 10;
            ~~~
!!! foo_1.ts(2,9): error TS2095: Cannot find name 'foo'.
    
==== tests/cases/compiler/foo_0.ts (0 errors) ====
    export var x = 42;
    